src/test/ui/unboxed-closures/unboxed-closure-sugar-used-on-struct-1.stderr
error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:8:16
   |
LL |     let x: Box<Bar()> = panic!();
   |                ^^^^^ only `Fn` traits may use parentheses

error[E0107]: missing generics for struct `Bar`
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:8:16
   |
LL |     let x: Box<Bar()> = panic!();
   |                ^^^ expected 1 type argument
   |
note: struct defined here, with 1 type parameter: `A`
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:3:8
   |
LL | struct Bar<A> {
   |        ^^^ -
help: use angle brackets to add missing type argument
   |
LL |     let x: Box<Bar<A>()> = panic!();
   |                   ^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0214.
For more information about an error, try `rustc --explain E0107`.
