src/test/ui/unboxed-closures/unboxed-closure-sugar-used-on-struct-1.rs
// Test that parentheses form doesn't work with struct types appearing in local variables.

struct Bar<A> {
    f: A
}

fn bar() {
    let x: Box<Bar()> = panic!();
    //~^ ERROR parenthesized type parameters may only be used with a `Fn` trait
    //~| ERROR missing generics for struct `Bar`
}

fn main() { }
